--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
     <style>
       body {
         overflow-x: hidden;
-      }
-      #timeline {
-        max-width: 900px;
-        margin: 0 auto;
         font-family: "PT Sans", sans-serif;
+        background-color: #f7f7f7;
+      }
+      #timeline,
+      #map {
+        max-width: 900px;
+        margin: 50px auto;
       }
     </style>
   </head>
