map popover and tweaks

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       media="all"
     />
     <style>
+      html,
       body {
         overflow-x: hidden;
         font-family: "PT Sans", sans-serif;
