executions map etc

--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
         background-color: #f7f7f7;
       }
       #timeline,
-      #map {
-        max-width: 900px;
+      #members,
+      #executions {
+        max-width: 1200px;
         margin: 50px auto;
       }
     </style>
   </head>
   <body>
     <div id="timeline"></div>
-    <div id="map"></div>
+    <div id="members"></div>
+    <div id="executions"></div>
     <script src="./src/index.js"></script>
   </body>
 </html>
