--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
       html,
       body {
         overflow-x: hidden;
+        margin: 0;
         font-family: "PT Sans", sans-serif;
         background-color: #f7f7f7;
       }
       #timeline,
       #members,
       #executions {
+        padding: 16px;
         max-width: 1200px;
         margin: 50px auto;
       }
